# games

./: .gitignore  devenv.nix  pyproject.toml
battleship/: actions.py  box_value.py  coordinate.py  exceptions.py  game.py  grid.py  main.py  player.py  ship.py
battleship/tests/: test_coordinate.py  test_grid.py  test_main.py  test_player.py  test_ship.py
red_or_black/: main.py
red_or_black/src/: __init__.py  card.py  color.py  deck.py  game.py  logging.py  models.py  player.py  round.py  suit.py  validators.py
red_or_black/tests/: test_card.py  test_player.py
