[tool.poetry]
name = "games"
version = "0.1.0"
description = "Little funny and simple games in Python"
authors = ["Paul ARNAUD <paul.a@sencrop.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
termcolor = "^2.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
ruff = "^0.0.291"
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
select = ["E", "F", "B", "C", "N", "W", "I"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]

# Same as Black.
line-length = 88

target-version = "py311"

[tool.pytest.ini_options]
addopts = "-ra -q -s"
testpaths = [
    "battleship/tests",
    "red_or_black/tests",
]

