[tool.poetry]
name = "games"
version = "0.1.0"
description = "Little funny and simple games in Python"
authors = ["Paul ARNAUD <paul.a@sencrop.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
termcolor = "^2.3.0"
pydantic = "^2.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-ra -q -s -v"
testpaths = [
    "battleship/tests",
    "red_or_black/tests",
]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
ignore = []
select = [
    "B",
    "C",
    "E",
    "F",
    "N",
    "W",
    "UP",
    "YTT",
    "ASYNC",
    # "S",
    "A",
    "I",
    "C4",
    "T10",
    "ISC",
    "ICN", 
    # "G", 
    "PIE",
    # "T20",
    # "PYI",
    "PERF",
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Default black configuration for ruff
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.mccabe]
max-complexity = 12
